static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i');


#hotel-logo {
  height:50px;
}

#bannerimg {
  width:100%;
  max-height:450px;
  object-fit:cover;
}

#form-div {
  background-color:rgb(240,240,240);
  padding:10px;
}

.list {
	text-align:center;
	list-style-type: none;
}

p {
	text-align:center;
	margin: 25px;
}

h1 {
  font-family: 'Playfair Display', serif;
  font-weight: 900;
  text-transform: uppercase;
  text-align:center;
}

h2 {
  font-family: 'Playfair Display', serif;
  font-weight: 800;
  color:rgb(247,50,52);
  text-transform: uppercase;
  text-align:center;
}

h3 {
  font-family: 'Playfair Display', serif;
  font-weight: 700;
  text-transform: uppercase;
  text-align:center;
}

#galleryButtonP {
	border-radius: 12px;
	padding: 8px;
	font-size: 12px;
	background-color: black;
	color:white;
}

#galleryButtonN{
	border-radius: 12px;
	padding: 8px;
	font-size: 12px;
	background-color: black;
	color:white;
}


tr .needsCleaning {
  background-color: black;
}

tr .unavailable {
  background-color: red;
}

.image_block {
	width: 500px;
    height: 300px;
    overflow: hidden;
    position: relative;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

#roomimages {
	display: block;
	object-fit: none;
	margin-left: auto;
	margin-right: auto;
}


#facilitiesimg{
	width: 500px;
	height: 280;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

a.sitemap-link{
	color: black;
	text-decoration: none;
	font-size: 25px;
	padding: 14px 25px;
	display: inline-block;
}

.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: rgb(247,50,52);
  color: white;
  text-align: center;
}

a.footer-link{
	color: white;
	padding: 6px;
}

